@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2006, 2007, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2006, 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -25,16 +25,15 @@
  * @test
  * @bug 6402062 6487891
  * @summary Tests CompoundBorderUIResource encoding
- * @run main/othervm -Djava.security.manager=allow javax_swing_plaf_BorderUIResource_CompoundBorderUIResource
+ * @run main/othervm javax_swing_plaf_BorderUIResource_CompoundBorderUIResource
  * @author Sergey Malenkov
  */
 
-import javax.swing.border.CompoundBorder;
 import javax.swing.plaf.BorderUIResource.CompoundBorderUIResource;
 
 public final class javax_swing_plaf_BorderUIResource_CompoundBorderUIResource extends AbstractTest<CompoundBorderUIResource> {
     public static void main(String[] args) {
-        new javax_swing_plaf_BorderUIResource_CompoundBorderUIResource().test(true);
+        new javax_swing_plaf_BorderUIResource_CompoundBorderUIResource().test();
     }
 
     protected CompoundBorderUIResource getObject() {
